syntax = "proto3";
package video;
option go_package="video";

import "video/model.proto";

message FeedRequest {
  int64 latest_time = 1;
  string token = 2;
}

message FeedResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated Video video_list = 3;
  int64 next_time = 4;
}

message PublishActionRequest {
  string token = 1;
  bytes data = 2;
  string title = 3;
}

message PublishActionResponse {
  int32 status_code = 1;
  string status_msg = 2;
}

message PublishListRequest {
  int64 user_id = 1;
  string token = 2;
}

message PublishListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated Video video_list = 3;
}

service VideoService {
  rpc Feed(FeedRequest) returns (FeedResponse);
  rpc PublishAction(PublishActionRequest) returns (PublishActionResponse);
  rpc PublishList(PublishListRequest) returns (PublishListResponse);
}
